--- a/css/styles.css
+++ b/css/styles.css
@@ -369,6 +369,7 @@ img {
   align-items: center;
   width: 100%;
   height: 100%;
+  color:#f4f4fd;
 
   background-color: var(--focused-txt-cl);
   border-radius: 50%;
