--- a/css/styles.css
+++ b/css/styles.css
@@ -424,11 +424,8 @@ img {
 .sprite-icon {
   fill: currentColor;
 }
-.sprite-icon:hover{
- 
-
+.sprite-icon:hover {
 }
-
 
 /* footer */
 .footer-studio {
@@ -453,6 +450,9 @@ img {
 .footer-container {
   display: flex;
   gap: 120px;
+  align-items: baseline;
+}
+.footer-content-container {
 }
 .social-media-heading {
   font-weight: 500;
@@ -463,13 +463,25 @@ img {
 
   margin-bottom: 16px;
 }
+.social-footer-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+.social-footer-item{
+  width: 40px;
+  height: 40px;
+
+}
 .footer-social-link {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 
-  width: 40px;
-  height: 40px;
+
 
   background-color: var(--focused-txt-cl);
   border-radius: 50%;
