--- a/css/styles.css
+++ b/css/styles.css
@@ -511,8 +511,8 @@ img {
   gap: 24px;
   margin-bottom: 72px;
 }
-.filters-item:hover,
-.filters-item:focus {
+.filters-button:hover,
+.filters-button:focus {
   border-radius: 4px;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -555,9 +555,10 @@ img {
 }
 
 .portfolio-link {
+  display: block;
 }
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-link:hover,
+.portfolio-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
