--- a/css/styles.css
+++ b/css/styles.css
@@ -400,7 +400,7 @@ img {
   gap: 24px;
 }
 .customers-item {
-  width: 168px;
+  width: calc((100% - 120px) / 6);
   height: 88px;
 
   border: 1px solid #8e8f99;
